<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_section1">登录</string>
    <string name="title_section2">注册</string>
    <string name="title_section3">其他</string>
    <string name="sd_exist">SD卡不存在,请插入SD卡</string>
    <string name="sd">内存卡空间不足</string>
    <string name="burst">連拍</string>
    <string name="anti_shake">防抖</string>
    <string name="delay_snap">定時</string>
    <string name="silence">靜音</string>
    <string name="color_effect">效果</string>
    <string name="file">本地文件</string>
    <string name="screen_shutter">全屏快门</string>
    <string name="switch_to_camera">拍照</string>
    <string name="other">其他</string>
    <string name="out">退出</string>
    <string name="switch_to_video">摄像</string>
    <string name="switch_to_camera_lable">切换到相机</string>
    <string name="setting">设置</string>
    <string name="webfile">网络文件</string>
    <string name="local_service_started">行车记录仪正在后台运行,点击启动</string>
    <string name="local_service_stopped">服务停止了……</string>
    <string name="local_service_label">行车记录仪正在运行</string>
    <string name="app_name">随手拍</string>
    <string name="File_label">文件:</string>
    <string name="Type_label">类型:</string>
    <string name="Size_label">文件大小:</string>
    <string name="Resolution_label">分辨率:</string>
    <string name="Format_label">文件格式:</string>
    <string name="Duration_label">时长:</string>
    <string name="Video">录影</string>
    <string name="Photo">拍照</string>
    <string name="Files">文件</string>
    <string name="Gallery">图库</string>
    <string name="Settings">设置</string>
    <string name="crash">碰撞</string>
    <string name="keep">保管</string>
    <string name="noti_switch">停止</string>
    <string name="start_switch">开始</string>
    <string name="button_archive">保管</string>
    <string name="button_erase_selected">删除选择</string>
    <string name="tab_uploads_name">Upload</string>
    <string name="button_proceed">漠视</string>
    <string name="start_title">第一次，开始</string>
    <string name="start_summary">"您第一次用行车记录仪吧！
行车记录仪是在车上用应用程序。按周期来保存录像。驾驶中发生碰撞时，自动记录事故录像。
手机的照相机非常敏感。在车上安装之前，必须要事先试验。
开始之前，设置几个项目。
这些项目之后不能在设置屏幕上变更。"</string>
    <string name="settings_call_number">紧急联系号码</string>
    <string name="settings_call_number_summary">设置发生事故时，发信息或联系的电话号码。</string>
    <string name="ok">确定</string>
    <string name="file_title">行车记录仪文件管理</string>
    <string name="version_name">1.0</string>
    <string name="title_file">本地视频</string>
    <string name="title_online">在线视频</string>
    <string name="init_decoders">正在进行第一次解压解码包...</string>
    <string name="loadinfo">载入中，请稍后...</string>
    <string name="file_oper">文件操作</string>
    <string name="file_rename">重命名</string>
    <string name="file_rename_failed">重命名失败</string>
    <string name="file_rename_exists">文件已存在</string>
    <string name="file_delete">删除</string>
    <string name="file_delete_confirm">确定删除 (%s) ？</string>
    <string name="video_layout_loading">正在缓冲...</string>
    <string name="vitamio_theme_app_name">VPlayer codec</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="VideoView_error_text_unknown">对不起,这个视频不能播放。</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>

</resources>