<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_panel"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_gravity="right"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/switch_to_video_icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/setting_icon_bg"
        android:onClick="cameraToVideo"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/setting_ic_video" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/switch_to_video"
            android:textColor="@color/white" />
    </LinearLayout>
    <!-- 22222222 -->

    <LinearLayout
        android:id="@+id/burst_icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@drawable/setting_icon_bg"
        android:onClick="openfile"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/file_text_w" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/file"
            android:textColor="@color/white" />
    </LinearLayout>
    <!-- 3333333 -->

    <LinearLayout
        android:id="@+id/setting_webfile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@drawable/setting_icon_bg"  
        android:onClick="webfile"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/webfile" />

        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/webfile"
            android:textColor="@color/white" />
    </LinearLayout>
    <!-- 444444444 -->

    <LinearLayout
        android:id="@+id/setting_icon1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@drawable/setting_icon_bg"
        android:onClick="app_setting"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/setting_ic_setting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/setting"
            android:textColor="@color/white" />
    </LinearLayout>
    <!-- 555555 -->

    <LinearLayout
        android:id="@+id/color_effect_icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@drawable/setting_icon_bg"
        android:onClick="exit"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/exit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/out"
            android:textColor="@color/white" />
    </LinearLayout>
<!--     <TextView -->
<!--         android:id="@+id/switch_to_video_icon" -->
<!--         style="@style/SettingPanelItem" -->
<!--         android:layout_height="fill_parent" -->
<!--         android:drawableTop="@drawable/setting_ic_video" -->
<!--         android:onClick="cameraToVideo" -->
<!--         android:text="@string/switch_to_video" /> -->

<!--     <TextView -->
<!--         android:id="@+id/burst_icon" -->
<!--         style="@style/SettingPanelItem" -->
<!--         android:layout_height="fill_parent" -->
<!--         android:drawableTop="@drawable/file_text_w" -->
<!--         android:onClick="openfile" -->
<!--         android:text="@string/file" /> -->

<!--     <TextView -->
<!--         android:id="@+id/burst_icon" -->
<!--         style="@style/SettingPanelItem" -->
<!--         android:layout_height="fill_parent" -->
<!--         android:drawableTop="@drawable/webfile" -->
<!--         android:onClick="webfile" -->
<!--         android:text="@string/webfile" /> -->

<!--     <TextView -->
<!--         android:id="@+id/color_effect_icon" -->
<!--         style="@style/SettingPanelItem" -->
<!--         android:layout_height="fill_parent" -->
<!--         android:drawableTop="@drawable/setting_ic_setting" -->
<!--         android:onClick="app_setting" -->
<!--         android:text="@string/setting" /> -->

<!--     <TextView -->
<!--         android:id="@+id/anti_shake_icon" -->
<!--         style="@style/SettingPanelItem" -->
<!--         android:layout_height="fill_parent" -->
<!--         android:drawableTop="@drawable/exit" -->
<!--         android:onClick="exit" -->
<!--         android:text="@string/out" /> -->

</LinearLayout>